--- a/TP_W24/Views/Home/Index.cshtml
+++ b/TP_W24/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
                                     <div class="excerpt">
                                         <h3>@item.CategorieName</h3>
                                         <p>@item.CategorieDescription</p>
-                                        <a class="btn btn-transparent" href='@Url.Action("categorie", "Home")'>Go</a>
+                                        <a class="btn btn-transparent" href='/Home/categorie?NoCat=@item.Categorie_ID'>Go</a>
                                     </div>
                                 </div>
                             </article>
