--- a/TP_W24/Views/Home/categorie.cshtml
+++ b/TP_W24/Views/Home/categorie.cshtml
@@ -1,16 +1,15 @@
-﻿@model IEnumerable<TP_W24.Models.Post>
+﻿@model IEnumerable<TP_W24.Controllers.PostDisplay>
     <!-- Start Blog Banner
         ==================================== -->
         <section id="blog-banner">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                       
                         <div class="blog-icon">
                             <i class="fa fa-book fa-4x"></i>
                         </div>
                         <div class="blog-title">
-                            <h1>"Nom de la Catégorie"</h1>
+                            <h1>Les @ViewBag.CategorieName</h1>
                         </div>
                         
 					</div>     <!-- End col-lg-12 -->
@@ -35,179 +34,22 @@
                             <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
 
                                 <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='/Home/Post'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='/Home/Post'><h3 style="float: left;margin-left: 20px;">@item.Post_Name</h3></a>
+                                    <a href='/Home/Post'><img src="@item.UserPathImg" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
+                                    <a href='/Home/Post'><h3 style="float: left;margin-left: 20px;">@item.PostName</h3></a>
                                 </div>
-
                                 <div class="post-meta">
                                     <span class="post-date">
-                                        <i class="fa fa-calendar"></i>@item.Post_Date_Heure
+                                        <i class="fa fa-calendar"></i>@item.PostDateHeure
                                     </span>
                                     <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
+                                        <i class="fa fa-comments"></i>@item.NbComment
                                     </span>
                                     <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
+                                        <i class="fa fa-user"></i><a href="#">@item.UserName</a>
                                     </span>
                                 </div>
                             </article>
                             }
-                           
-	
-	                        @*<!--------------------------------- Début Discussion --------------------------------->
-	                        <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
-		                        <!--------------------------------- Image et Titre --------------------------------->
-		                        <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='@Url.Action("post", "Home")'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='@Url.Action("post", "Home")'><h3 style="float: left;margin-left: 20px;">** Question ou Sujet du Post **</h3></a>
-		                        </div>
-		                        <!--------------------------------- FIN Image et Titre --------------------------------->
-		                        <div class="post-meta">
-                                    <span class="post-date">
-                                        <i class="fa fa-calendar"></i>30 jun 2014
-                                    </span>
-			                        <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
-                                    </span>
-			                        <span class="post-view">
-                                        <i class="fa fa-eye"></i>265 Views
-                                    </span>
-			                        <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
-                                    </span>
-		                        </div>
-	                        </article>
-	                        <!--------------------------------- FIN Discussion --------------------------------->
-	
-	
-	                        <!--------------------------------- Début Discussion --------------------------------->
-	                        <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
-		                        <!--------------------------------- Image et Titre --------------------------------->
-		                        <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='@Url.Action("post", "Home")'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='@Url.Action("post", "Home")'><h3 style="float: left;margin-left: 20px;">** Question ou Sujet du Post **</h3></a>
-		                        </div>
-		                        <!--------------------------------- FIN Image et Titre --------------------------------->
-		                        <div class="post-meta">
-                                    <span class="post-date">
-                                        <i class="fa fa-calendar"></i>30 jun 2014
-                                    </span>
-			                        <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
-                                    </span>
-			                        <span class="post-view">
-                                        <i class="fa fa-eye"></i>265 Views
-                                    </span>
-			                        <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
-                                    </span>
-		                        </div>
-	                        </article>
-	                        <!--------------------------------- FIN Discussion --------------------------------->
-	
-	
-	                        <!--------------------------------- Début Discussion --------------------------------->
-	                        <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
-		                        <!--------------------------------- Image et Titre --------------------------------->
-		                        <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='@Url.Action("post", "Home")'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='@Url.Action("post", "Home")'><h3 style="float: left;margin-left: 20px;">** Question ou Sujet du Post **</h3></a>
-		                        </div>
-		                        <!--------------------------------- FIN Image et Titre --------------------------------->
-		                        <div class="post-meta">
-                                    <span class="post-date">
-                                        <i class="fa fa-calendar"></i>30 jun 2014
-                                    </span>
-			                        <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
-                                    </span>
-			                        <span class="post-view">
-                                        <i class="fa fa-eye"></i>265 Views
-                                    </span>
-			                        <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
-                                    </span>
-		                        </div>
-	                        </article>
-	                        <!--------------------------------- FIN Discussion --------------------------------->
-	
-	
-	                        <!--------------------------------- Début Discussion --------------------------------->
-	                        <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
-		                        <!--------------------------------- Image et Titre --------------------------------->
-		                        <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='@Url.Action("post", "Home")'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='@Url.Action("post", "Home")'><h3 style="float: left;margin-left: 20px;">** Question ou Sujet du Post **</h3></a>
-		                        </div>
-		                        <!--------------------------------- FIN Image et Titre --------------------------------->
-		                        <div class="post-meta">
-                                    <span class="post-date">
-                                        <i class="fa fa-calendar"></i>30 jun 2014
-                                    </span>
-			                        <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
-                                    </span>
-			                        <span class="post-view">
-                                        <i class="fa fa-eye"></i>265 Views
-                                    </span>
-			                        <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
-                                    </span>
-		                        </div>
-	                        </article>
-	                        <!--------------------------------- FIN Discussion --------------------------------->
-	
-	
-	                        <!--------------------------------- Début Discussion --------------------------------->
-	                        <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
-		                        <!--------------------------------- Image et Titre --------------------------------->
-		                        <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='@Url.Action("post", "Home")'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='@Url.Action("post", "Home")'><h3 style="float: left;margin-left: 20px;">** Question ou Sujet du Post **</h3></a>
-		                        </div>
-		                        <!--------------------------------- FIN Image et Titre --------------------------------->
-		                        <div class="post-meta">
-                                    <span class="post-date">
-                                        <i class="fa fa-calendar"></i>30 jun 2014
-                                    </span>
-			                        <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
-                                    </span>
-			                        <span class="post-view">
-                                        <i class="fa fa-eye"></i>265 Views
-                                    </span>
-			                        <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
-                                    </span>
-		                        </div>
-	                        </article>
-	                        <!--------------------------------- FIN Discussion --------------------------------->
-	
-	
-	                        <!--------------------------------- Début Discussion --------------------------------->
-	                        <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
-		                        <!--------------------------------- Image et Titre --------------------------------->
-		                        <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='@Url.Action("post", "Home")'><img src="/img/blog/user.jpg" alt="Flying bicycle" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='@Url.Action("post", "Home")'><h3 style="float: left;margin-left: 20px;">** Question ou Sujet du Post **</h3></a>
-		                        </div>
-		                        <!--------------------------------- FIN Image et Titre --------------------------------->
-		                        <div class="post-meta">
-                                    <span class="post-date">
-                                        <i class="fa fa-calendar"></i>30 jun 2014
-                                    </span>
-			                        <span class="comments">
-                                        <i class="fa fa-comments"></i>18 Comments
-                                    </span>
-			                        <span class="post-view">
-                                        <i class="fa fa-eye"></i>265 Views
-                                    </span>
-			                        <span class="author">
-                                        <i class="fa fa-user"></i><a href="#">Admin</a>
-                                    </span>
-		                        </div>
-	                        </article>
-	                        <!--------------------------------- FIN Discussion --------------------------------->*@
                          
 	                        <!----------------------------- Pagination ----------------------------->
                             <nav class="post-pagination wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
@@ -270,11 +112,10 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="categories">
-                                        <li><i class="fa fa-comments-o"></i> @Html.ActionLink("Bitcoins", "categorie", "Home")</li>
-                                        <li><i class="fa fa-comments-o"></i> @Html.ActionLink("Verge", "categorie", "Home")</li>
-                                        <li><i class="fa fa-comments-o"></i> @Html.ActionLink("Dogecoins", "categorie", "Home")</li>
-                                        <li><i class="fa fa-comments-o"></i> @Html.ActionLink("Litecoins", "categorie", "Home")</li>
-                                        @*<li><i class="fa fa-plus"></i> <a href="#">Ajouter</a></li>*@ @*// Pour les Admin*@
+                                        <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=1'>Bitcoins</a>
+                                        <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=4'>Verge</a>
+                                        <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=2'>Dogecoins</a>
+                                        <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=3'>Litecoins</a>
                                     </ul>
                                 </div>
                             </form>
