--- a/TP_W24/Views/Categories/Index.cshtml
+++ b/TP_W24/Views/Categories/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="col-lg-12 text-center">
 
                 <div class="blog-icon">
-                    <i class="fa fa-book fa-4x"></i>
+                    <i class="fa fa-btc fa-4x"></i>
                 </div>
                 <div class="blog-title">
                     <h1>Catégories</h1>
