--- a/TP_W24/Views/Home/categorie.cshtml
+++ b/TP_W24/Views/Home/categorie.cshtml
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <div class="blog-icon">
-                            <i class="fa fa-book fa-4x"></i>
+                            <img style="width:78px;height:84px;" src="@ViewBag.ImgPATH" />
                         </div>
                         <div class="blog-title">
                             <h1>Les @ViewBag.CategorieName</h1>
@@ -72,6 +72,12 @@
 	                        <!------------------------- Fin Pagination ----------------------------->
                     <!-- Widget Section -->
                     <div id="right-sidebar" class="col-md-4 col-sm-4">
+
+                        <aside class="widget wow fadeInUp" data-wow-duration="1000ms">
+                            <div class="widget-title">
+                                <a href="/Posts/Create?NoCat=@ViewBag.CategorieNumber"><h3>Ajouter</h3></a>
+                            </div>
+                        </aside>
 	
 	                    <!------------------------------Recherche ----------------------------->
                         <aside class="widget wow fadeInUp"  data-wow-duration="1000ms">
