--- a/TP_W24/Views/Shared/_Layout.cshtml
+++ b/TP_W24/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/tinymce/tinymce.js"></script>
     <script>
-        Tinymce.init ({
+        tinymce.init ({
             selector: "textarea",
                 theme : "modern",
                     height : 300
@@ -79,6 +79,7 @@
                 <ul id="nav" class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "index", "Home")</li>
                     <li>@Html.ActionLink("Catégorie", "index", "Categories")</li>
+                    <li>@Html.ActionLink("Ajouter Post", "Create", "Posts")</li>
                     <li>@Html.ActionLink("Login", "login", "Account")</li>
                     <li>@Html.ActionLink("S'inscrire", "register", "Account")</li>
                 </ul>
