--- a/TP_W24/Views/Shared/_Layout.cshtml
+++ b/TP_W24/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
     <script>
         tinymce.init ({
             selector: "textarea",
-                theme : "modern",
-                    height : 300
+            theme : "modern",
+            height: 300,
         })
     </script>
     <!-- Mobile Specific Meta
