--- a/TP_W24/Views/Home/categorie.cshtml
+++ b/TP_W24/Views/Home/categorie.cshtml
@@ -34,8 +34,8 @@
                             <article class="entry wow fadeInDown"  data-wow-duration="1000ms" data-wow-delay="300ms">
 
                                 <div style="height:60px;margin-top: 25px;" class="post-excerpt">
-                                    <a href='/Home/Post?NoCat=@item.PostCategorieID'><img src="@item.UserPathImg" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
-                                    <a href='/Home/Post?NoCat=@item.PostCategorieID'><h3 style="float: left;margin-left: 20px;">@item.PostName</h3></a>
+                                    <a href='/Home/Post?NoCat=@item.PostCategorieID&NoPost=@item.PostID'><img src="@item.UserPathImg" style="width: 50px;height: 50px;float: left;" class="img-responsive"></a>
+                                    <a href='/Home/Post?NoCat=@item.PostCategorieID&NoPost=@item.PostID'><h3 style="float: left;margin-left: 20px;">@item.PostName</h3></a>
                                 </div>
                                 <div class="post-meta">
                                     <span class="post-date">
