--- a/TP_W24/Views/Comments/Index.cshtml
+++ b/TP_W24/Views/Comments/Index.cshtml
@@ -1,51 +1,84 @@
-﻿@model IEnumerable<TP_W24.Models.Comment>
+﻿@model IEnumerable<TP_W24.Controllers.PostCommentDisplay>
+@{ var comment = Model.Select(t => t.comment).FirstOrDefault(); var Nbcom = ""; }
+<section id="blog-page">
+    <div style="margin-top:85px;" class="container">
+        <div class="row">
+            <div class="next-prev clearfix">
+                <a href="" class="prev-post">
+                    <i class="fa fa-angle-left fa-2x"></i>Précédent Post
+                </a>
+                <a href="" class="next-post pull-right">
+                    Post Suivant<i class="fa fa-angle-right fa-2x"></i>
+                </a>
+            </div>
+            @foreach (var item in Model)
+            {
+                Nbcom = item.NbComment.ToString();
+                <div class="author-about clearfix">
 
-@{
-    ViewBag.Title = "Index";
+                    <h4>@item.PostName</h4>
+
+                    <div class="post-author pull-left">
+                        <img src="@item.UserPathImg" alt="">
+                    </div>
+                    <div class="author-bio">
+                        @Html.Raw(item.PostMessage)
+                    </div>
+
+                </div>
+            }
+            <br />
+            <hr />
+            <div id="comments" class="comments-section">
+                <h4>@Nbcom Commentaire</h4>
+
+                <ol class="comment-list">
+                    @foreach (var item in comment)
+                    {
+                        <li id="comment-1">
+                            <div class="comment-wrap">
+                                <div class="author-avatar pull-left">
+                                    <img style="width:75px;height:75px;" src="@item.User_PATH_IMG" alt="">
+                                </div>
+                                <div class="author-comment">
+                                    <cite class="pull-left"><a href="#">@item.Username</a></cite>
+                                    <div style="clear:both"></div>
+                                    <div class="comment-meta">
+                                        <i class="fa fa-calendar"></i>  @item.Comment_Date_Heure
+                                    </div>
+                                </div>
+                                <div class="comment-content">
+                                    @Html.Raw(item.Comment_Text)
+                                </div>
+                            </div>
+                        </li>
+                    }
+                </ol>
+            </div>
+            <div class="comment-reply-form">
+                <h3>Laisse ton avis</h3>
+                <form id="comment-form" method="post" action="#">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <!-- End .form-group -->
+                            <div class="form-group">
+                                <textarea class="form-control" style="resize:none;" placeholder="Message *" id="message" name="message" rows="5" cols="12" required></textarea>
+                            </div>
+                        </div>
+                        <!-- End .form-group -->
+                        <div class="col-md-12" style="margin-top:10px">
+                            <div class="form-group">
+                                <input type="submit" id="post-comment" value="Envoyée " class="btn btn-transparent">
+                            </div>
+                        </div>
+                        <!-- End .form-group -->
+                    </div>
+                </form>
+            </div><!-- End Single Post -->
+        </div>	    <!-- End row -->
+    </div>       <!-- End container -->
+</section>    <!-- End Section -->
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Comment_Text)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comment_Date_Heure)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AspNetUser.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Post.Post_Name)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment_Text)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment_Date_Heure)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AspNetUser.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Post.Post_Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CommentID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CommentID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CommentID })
-        </td>
-    </tr>
-}
-
-</table>
