Tout les ajout marche restes panel admin et user

--- a/TP_W24/Views/Categories/Index.cshtml
+++ b/TP_W24/Views/Categories/Index.cshtml
@@ -48,7 +48,7 @@
                                 <div class="excerpt">
                                     <h3>@item.CategorieName</h3>
                                     <p>@item.CategorieDescription</p>
-                                    <a class="btn btn-transparent" href='/Home/categorie?NoCat=@item.Categorie_ID'>Go</a>
+                                    <a class="btn btn-transparent" href='/Posts/Index?NoCat=@item.Categorie_ID'>Go</a>
                                 </div>
                             </div>
                         </article>
@@ -99,10 +99,10 @@
                                         </div>
                                         <div class="widget-content">
                                             <ul class="categories">
-                                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=1'>Bitcoins</a>
-                                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=4'>Verge</a>
-                                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=2'>Dogecoins</a>
-                                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=3'>Litecoins</a>
+                                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=1'>Bitcoins</a>
+                                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=4'>Verge</a>
+                                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=2'>Dogecoins</a>
+                                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=3'>Litecoins</a>
                                             </ul>
                                         </div>
                                     </form>
