--- a/TP_W24/Views/Posts/Index.cshtml
+++ b/TP_W24/Views/Posts/Index.cshtml
@@ -114,10 +114,10 @@
                         </div>
                         <div class="widget-content">
                             <ul class="categories">
-                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=1'>Bitcoins</a>
-                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=4'>Verge</a>
-                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=2'>Dogecoins</a>
-                                <li><i class="fa fa-comments-o"></i><a href='/Home/categorie?NoCat=3'>Litecoins</a>
+                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=1'>Bitcoins</a>
+                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=4'>Verge</a>
+                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=2'>Dogecoins</a>
+                                <li><i class="fa fa-comments-o"></i><a href='/Posts/Index?NoCat=3'>Litecoins</a>
                             </ul>
                         </div>
                     </form>
