Droits Comments/cat, Pagination Et Demi Login
Le login marche presque manque 1 ou 2 steps

--- a/TP_W24/Views/Account/Login.cshtml
+++ b/TP_W24/Views/Account/Login.cshtml
@@ -1,3 +1,8 @@
+@using TP_W24.Models
+@model LoginViewModel
+@{
+    ViewBag.Title = "Connexion";
+}
 <!-- Srart Contact Us
         =========================================== -->
 <section id="contact-us">
@@ -13,14 +18,26 @@
             <!-- / End Contact Details -->
             <!-- Contact Form -->
             <div class="contact-form col-md-6 col-lg-offset-3 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                <form id="contact-form" method="post" action="sendmail.php" role="form">
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+
+                    @Html.AntiForgeryToken()
                     <div class="form-group">
-                        <input type="text" placeholder="Nom d'utilisateur/Email" class="form-control" name="name" id="name">
+                        UserName
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+
+                        @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        <input type="text" placeholder="Mot de passe" class="form-control" name="subject" id="subject">
+                        Password
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+                 
                     </div>
+                
                     <div id="mail-success" class="success">
                         Thank you. The Mailman is on His Way :)
                     </div>
@@ -28,9 +45,12 @@
                         Sorry, don't know what happened. Try later :(
                     </div>
                     <div id="cf-submit">
-                        <input type="submit" id="contact-submit" class="btn btn-transparent" value="Se Connecter">
+                        <input type="submit" id="Connexion" class="btn btn-transparent" value="Se Connecter">
                     </div>
-                </form>
+                }
+                @section Scripts {
+                    @Scripts.Render("~/bundles/jqueryval")
+                }
             </div>
             <!-- ./End Contact Form -->
         </div> <!-- end row -->
