--- a/TP_W24/Views/Comments/Index.cshtml
+++ b/TP_W24/Views/Comments/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TP_W24.Controllers.PostCommentDisplay>
+﻿@model PagedList.IPagedList<TP_W24.Controllers.PostCommentDisplay>
+@using PagedList.Mvc
 @{
     var comment = Model.Select(t => t.comment).FirstOrDefault();
     var Nbcom = "";
@@ -61,34 +62,57 @@
 
 
             <div class="comment-reply-form">
-                <h3>Laisse ton avis</h3>
-                <form id="comment-form" method="post" action="#">
-                    <input type="hidden" name="FK_Post_ID" value="@Model.Select(t=>t.PostID).FirstOrDefault()" />
-                    <input type="hidden" name="FK_User_ID" value="@Model.Select(t=>t.PostUserID).FirstOrDefault()" />
-                    <input type="hidden" name="NoCat" value="@Model.Select(t=>t.PostCategorieID).FirstOrDefault()" />
-                    <input type="hidden" name="NoPost" value="@Model.Select(t=>t.PostID).FirstOrDefault()" />
-                    <div class="row">
-                        <div class="col-md-12">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <h3>Laisse ton avis</h3>
+                    <form id="comment-form" method="post" action="#">
+                        <input type="hidden" name="FK_Post_ID" value="@Model.Select(t=>t.PostID).FirstOrDefault()" />
+                        <input type="hidden" name="FK_User_ID" value="@Model.Select(t=>t.PostUserID).FirstOrDefault()" />
+                        <input type="hidden" name="NoCat" value="@Model.Select(t=>t.PostCategorieID).FirstOrDefault()" />
+                        <input type="hidden" name="NoPost" value="@Model.Select(t=>t.PostID).FirstOrDefault()" />
+                        <div class="row">
+                            <div class="col-md-12">
+                                <!-- End .form-group -->
+                                <div class="form-group">
+                                    <textarea class="form-control" style="resize:none;" placeholder="Message *" id="message" name="Comment_Text" rows="5" cols="12"></textarea>
+                                </div>
+                            </div>
                             <!-- End .form-group -->
-                            <div class="form-group">
-                                <textarea class="form-control" style="resize:none;" placeholder="Message *" id="message" name="Comment_Text" rows="5" cols="12"></textarea>
+                            <div class="col-md-12" style="margin-top:10px">
+                                <div class="form-group">
+                                    <input type="submit" value="Envoyée" class="btn btn-transparent" />
+                                </div>
                             </div>
+                            <!-- End .form-group -->
                         </div>
-                        <!-- End .form-group -->
-                        <div class="col-md-12" style="margin-top:10px">
-                            <div class="form-group">
-                                <input type="submit" value="Envoyée" class="btn btn-transparent"/>
-                            </div>
-                        </div>
-                        <!-- End .form-group -->
-                    </div>
-                </form>
+                    </form>
+
+                }
+                @if(!User.Identity.IsAuthenticated)
+                {
+                    <h3>Connectez vous pour commenter</h3>
+                }
+
+            <hr />
+                <div class="col-md-12" style="margin-top:35px;">
+
+                    Page @Model.PageNumber / @Model.PageCount
+
+
+                    @*Permet d'afficher les differents numero de page*@
+
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }))
+
+                </div>
             </div><!-- End Single Post -->
 
 
         </div>	    <!-- End row -->
     </div>       <!-- End container -->
+    
 </section>    <!-- End Section -->
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
