--- a/TP_W24/Views/Posts/Index.cshtml
+++ b/TP_W24/Views/Posts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TP_W24.Controllers.PostDisplay>
+﻿@model PagedList.IPagedList<TP_W24.Controllers.PostDisplay>
+@using PagedList.Mvc
 <!-- Start Blog Banner
     ==================================== -->
 <section id="blog-banner">
@@ -51,19 +52,17 @@
 
                     <!----------------------------- Pagination ----------------------------->
                     <nav class="post-pagination wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                        <ul>
-                            <li class="disabled"><a href="#">&laquo;</a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">...</a></li>
-                            <li><a href="#">10</a></li>
-                            <li><a href="#">11</a></li>
-                            <li><a href="#">12</a></li>
-                            <li><a href="#">13</a></li>
-                            <li><a href="#">&raquo;</a></li>
-                        </ul>
+                        <hr />
+                        <div class="col-md-12" style="margin-top:35px;">
+
+                            Page @Model.PageNumber / @Model.PageCount
+
+
+                            @*Permet d'afficher les differents numero de page*@
+
+                            @Html.PagedListPager(Model, page => Url.Action("Index", new {NoCat = ViewBag.CategorieNumber, page = page }))
+
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -72,9 +71,14 @@
             <div id="right-sidebar" class="col-md-4 col-sm-4">
 
                 <aside class="widget wow fadeInUp" data-wow-duration="1000ms">
-                    <div class="widget-title">
-                        <a href="/Posts/Create?NoCat=@ViewBag.CategorieNumber"><h3>Ajouter</h3></a>
-                    </div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <div class="widget-title">
+                            <a href="/Posts/Create?NoCat=@ViewBag.CategorieNumber"><h3>Ajouter</h3></a>
+                        </div>
+
+                    }
+
                 </aside>
 
                 <!------------------------------Recherche ----------------------------->
