--- a/TP_W24/Views/Categories/Create.cshtml
+++ b/TP_W24/Views/Categories/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategorieDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CategorieDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.CategorieDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategorieDescription, "", new { @class = "text-danger" })
             </div>
         </div>
