--- a/TP_W24/Views/Account/Edit.cshtml
+++ b/TP_W24/Views/Account/Edit.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <!-- section title -->
             <div class="title text-center wow fadeIn" data-wow-duration="500ms">
-                <h2>Se <span class="color">Connecter</span></h2>
+                <h2>Changer <span class="color">Info</span></h2>
                 <div class="border"></div>
             </div>
             <!-- /section title -->
@@ -17,7 +17,7 @@
             <!-- / End Contact Details -->
             <!-- Contact Form -->
             <div class="contact-form col-md-6 col-lg-offset-3 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                @using (Html.BeginForm())
+                @using (Html.BeginForm("Edit","Account",FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
                     @Html.AntiForgeryToken()
 
@@ -50,11 +50,8 @@
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.UserPath_Img, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.UserPath_Img, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.UserPath_Img, "", new { @class = "text-danger" })
-                            </div>
+                            <label for="file">Upload Image:</label>
+                            <input type="file" value="" name="fileIMG" id="file" /><br><br>
                         </div>
 
                         <div class="form-group">
